tests/rosetta/transpiler/Scala/9-billion-names-of-god-the-integer.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/9-billion-names-of-god-the-integer.scala:7: error: reassignment to val
      a = a.slice(0, n - 1)
        ^
/workspace/mochi/tests/rosetta/transpiler/Scala/9-billion-names-of-god-the-integer.scala:57: error: value - is not a member of Any
      var diff = av - bv - borrow
                    ^
/workspace/mochi/tests/rosetta/transpiler/Scala/9-billion-names-of-god-the-integer.scala:96: error: type mismatch;
 found   : Any
 required: scala.collection.mutable.ArrayBuffer[Int]
        row = row :+ bigAdd(row((row).size - 1), `val`)
                                                 ^
three errors found
